objects/Species__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rarity__c</fullName>
        <label>Rarity</label>
        <picklist>
            <picklistValues>
                <fullName>Common</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endangered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extinct</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Species_Group__c</fullName>
        <description>The group of the specie in which Biosightings separates species for reporting and analytics.</description>
        <label>Species Group</label>
        <picklist>
            <picklistValues>
                <fullName>Mammals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fungi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arachnids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butterflies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dragonflies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diptera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hymenoptera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other invertebrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birds</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Species</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Species_Group__c</columns>
        <columns>Rarity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Species Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Species</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>